# PharmaServe

./: .gitignore  CMakeLists.txt  PharmaServe.slnx  README.md
PharmaServe/: Order.h  OrderQueue.cpp  OrderQueue.h  PharmaServe.cpp  PharmaServe.vcxproj  PharmaServe.vcxproj.filters  WorkerHandle.h  WorkerManager.cpp  WorkerManager.h  WorkerStatus.cpp  WorkerStatus.h
PharmaServe/x64/Debug/: PharmaServe.exe.recipe  PharmaServe.ilk  vc145.idb
PharmaServe/x64/Debug/PharmaServe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PharmaServe.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: CMakeLists.txt  OrderQueueTests.cpp
